assets/css/style.css
/* ... */
section.pricing-section::before {
  content: "";
  background: url(../images/price-wave.png);
  background-repeat: no-repeat;
  background-size: 100%;
  position: absolute;
  bottom: 0px;
  height: 92px;
  width: 100%;
  z-index: 5;
  background-position: center bottom;
}

.pricing-container {
  padding: 109px 0 133px;
}

.pricing-container .pricing-description {
  text-align: center;
  padding-bottom: 74px;
}

.pricing-container .pricing-description p {
  padding: 0 81px;
}

.price-row {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.price-row .price-col {
  max-width: 350px;
  padding: 26px 22px 0 36px;
  text-align: center;
  border: 1px solid rgba(231, 233, 237, 1);
  border-radius: 10px;
}

.price-row .price-col p {
  color: var(--hover-color);
  font-family: "gilroy-bold";
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 1.63px;
  text-align: center;
}

.price-row .price-col .price-label p {
  color: black;
}

.price-row .price-col .price-label {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 31px 0 21px;
}

.price-row .price-col .price-label h2 span {
  font-size: 22px;
}

.price-row .price-col .price-description ul {
  list-style: none;
  padding: 0;
}

.price-description ul li {
  padding: 21px 9px 18px;
  border-top: 1px solid rgba(231, 233, 237, 1);
  font-size: 19px;
  letter-spacing: -0.2px;
  line-height: 32px;
}

.black-btn {
  color: white;
  background-color: black;
}

.price-col:hover {
  background-color: white;
}

.price-col .black-btn:hover {
  background-color: var(--orange-color);
  color: white;
}

/* end of price section */

.links-container {
  display: flex;
  justify-content: space-around;
  gap: 190px;
  padding: 88px 0px;
}

.links-container .left-links {
  display: flex;
  gap: 46px;
}

.links-container .left-links h5 {
  margin-bottom: 32px;
}

.links-container .right-links .app-link {
  margin-bottom: 13px;
}

.links-container .left-links .links ul {
  list-style: none;
  padding: 0;
}

.links-container .left-links .links ul li a {
  line-height: 40px;
  letter-spacing: -0.2px;
  text-decoration: none;
  color: black;
}

.links-container .left-links .links ul li a:hover {
  color: var(--hover-color);
}

.links-container .left-links .links {
  padding-right: 76px;
}

.footer-description {
  border-top: 1px solid rgba(231, 233, 237, 1);
  padding: 29px 0 33px;
  display: flex;
  justify-content: space-between;
}

.footer-description .copyright {
  display: flex;
  gap: 10px;
  align-items: center;
}

.footer-description .copyright svg {
  width: 17px;
}

.footer-description .social-media ul {
  display: flex;
  gap: 31px;
  list-style: none;
  padding: 0;
}

.footer-description .social-media ul li a img {
  width: 17px;
}

.footer-description .social-media ul li a svg {
  width: 17px;
}

.footer-description .social-media ul li a svg:hover {
  fill: var(--hover-color);
}

/* media-query */

@media (max-width: 1110px) {
  header::after {
    height: 300px;
  }

  .container {
    padding: 0 20px;
  }
}

@media (max-width: 991px) {
  .main-navigation .menu-navigation {
    display: none;
    position: absolute;
    flex-direction: column;
    padding: 20px;
    background: linear-gradient(rgba(121, 34, 216, 1), rgba(54, 54, 178, 1));
    box-shadow: 0px 0px 2px magenta;
    gap: 20px;
    right: 28px;
    top: 53px;
  }

  .main-navigation .menu-navigation ul {
    flex-direction: column;
    padding: 0;
    gap: 30px;
  }

  .menu-icon {
    padding: 5px;
    border: 1px solid white;
  }

  .menu-icon svg {
    fill: white;
    width: 30px;
    display: block;
  }

  .main-navigation .menu-navigation.show {
    display: flex;
  }

  .banner-container--right__img {
    top: 55px;
  }

  .banner-container--right__img img {
    max-width: 100%;
    height: auto;
  }

  .banner-container {
    flex-direction: column;
    align-items: center;
  }

  .collaborate-sectiont .collaborate-team {
    flex-direction: column-reverse;
    align-items: center;
  }

  .remote-team-section .remote-team {
    flex-direction: column;
    align-items: center;
  }

  .download-container .download-container--description {
    padding: 0px;
  }

  .download-container .download-container--steps {
    flex-direction: column;
    align-items: center;
  }
  .download-container--steps::before {
    display: none;
  }

  .video-img {
    padding: 0px 20px;
  }

  section.features-section {
    margin-top: -280px;
    padding-top: 280px;
  }

  section.pricing-section::before {
    bottom: -57px;
  }

  footer .links-container {
    flex-direction: column;
    align-items: center;
  }

  footer .footer-description {
    flex-direction: column;
    align-items: center;
  }
}

@media (max-width: 480px) {
  .main-navigation {
    padding-top: 20px;
    align-items: center;
    gap: 20px;
  }

  .collaborate-left--img img {
    max-width: 100%;
    height: auto;
  }

  .remote-team--right__img img {
    max-width: 100%;
    height: auto;
  }

  section.features-section {
    margin-top: -129px;
    padding-top: 129px;
  }

  .testimonial-wrapper .testimonial {
    flex-direction: column;
  }

  .price-row {
    flex-direction: column;
    align-items: center;
  }

  section.pricing-section::before {
    bottom: -2px;
  }

  .pricing-container .pricing-description p {
    padding: 0;
  }

  .pricing-container {
    padding: 109px 0 176px;
  }

  footer .links-container .left-links {
    flex-direction: column;
    align-items: center;
  }
}

